--- a/app/src/main/res/layout/activity_telacinco.xml
+++ b/app/src/main/res/layout/activity_telacinco.xml
@@ -5,53 +5,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fundo"
-    tools:context=".Telaquatro">
+    tools:context=".Telacinco">
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="226dp"
-        android:layout_height="195dp"
-        android:layout_marginTop="4dp"
+        android:id="@+id/imageView"
+        android:layout_width="188dp"
+        android:layout_height="159dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/dogsorrindo2" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="243dp"
+        android:layout_height="199dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/quokka" />
+        app:srcCompat="@drawable/gatinho" />
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="189dp"
-        android:layout_height="212dp"
-        android:layout_marginTop="4dp"
+        android:id="@+id/imageView7"
+        android:layout_width="304dp"
+        android:layout_height="184dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:srcCompat="@drawable/burrinho" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="183dp"
-        android:layout_height="202dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="0.41"
-        app:srcCompat="@drawable/dogsorrindo" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/gatinho2" />
 
     <Button
-        android:id="@+id/bt_prox"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="próximo"
         android:textAllCaps="false"
         android:textColor="@color/black"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.963"
+        app:layout_constraintHorizontal_bias="0.943"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.94" />
-
+        app:layout_constraintVertical_bias="0.931" />
 </androidx.constraintlayout.widget.ConstraintLayout>
