--- a/app/src/main/res/layout/activity_telacinco.xml
+++ b/app/src/main/res/layout/activity_telacinco.xml
@@ -42,7 +42,7 @@
         app:srcCompat="@drawable/gatinho2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/bt_proxi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="próximo"
