--- a/app/src/main/res/layout/activity_chatbot.xml
+++ b/app/src/main/res/layout/activity_chatbot.xml
@@ -10,7 +10,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/idVChats"
+        android:id="@+id/idRVChats"
         android:layout_above="@+id/idRLMsg"
         />
     <RelativeLayout
