--- a/app/src/main/res/layout/activity_teladois.xml
+++ b/app/src/main/res/layout/activity_teladois.xml
@@ -40,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
+        android:backgroundTint="@color/fundo"
         android:text="chatbot"
         android:textAllCaps="false"
         android:textColor="@color/black"
@@ -55,6 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
+        android:backgroundTint="@color/fundo"
         android:text="show me something"
         android:textAllCaps="false"
         android:textColor="@color/black"
