--- a/app/src/main/res/layout/activity_telacinco.xml
+++ b/app/src/main/res/layout/activity_telacinco.xml
@@ -45,6 +45,7 @@
         android:id="@+id/bt_proxi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/fundo"
         android:text="próximo"
         android:textAllCaps="false"
         android:textColor="@color/black"
