--- a/app/src/main/res/layout/activity_telaquatro.xml
+++ b/app/src/main/res/layout/activity_telaquatro.xml
@@ -43,6 +43,7 @@
         android:id="@+id/bt_prox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/fundo"
         android:text="próximo"
         android:textAllCaps="false"
         android:textColor="@color/black"
