--- a/app/src/main/res/layout/activity_telaseis.xml
+++ b/app/src/main/res/layout/activity_telaseis.xml
@@ -87,6 +87,7 @@
         android:id="@+id/bt_voltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/fundo"
         android:text="voltar"
         android:textAllCaps="false"
         android:textColor="@color/black"
